启动机制和注解驱动